parser.cpp
#include "parser.h"

string parser::newTemp()
{
    string res = "t" + to_string(varNum);
    symbol s;
    s.d = Datatype::adad;
    s.var = res;
    s.t = type::var;
    s.address = address;
    s.init = 0;
    address += 4;
    tbl.push_back(s);
    tblIndex++;
    return res;
}

void parser::fillBlank(int n, int val)
{
    icLines[n] += to_string(val);
}

void parser::syntax_error()
{
    cout << "SYNTAX ERROR\n";
    cout << " at line " << lineNum << endl;
    exit(1);
}

token parser::expect(TokenType expected_type)
{
    token t = _lexer.getNextToken();
    if (t.tokenType != expected_type)
        syntax_error();
    return t;
}

void parser::checkEL()
{
    while (_lexer.peek(1).tokenType == TokenType::END_OF_LINE)
    {
        expect(TokenType::END_OF_LINE);
        lineNum++;
    }
}

bool parser::T(string &s)
{
    tabs++;
    printTabs("T");
    tabs--;
    if (!F(s))
    {
        syntax_error();
        return false;
    }

    string i = s;

    if (!Q(s, i))
    {
        syntax_error();
        return false;
    }

    tabs--;
    return true;
}

bool parser::R(string &s, string i)
{
    tabs++;
    printTabs("R");
    checkEL();
    if (_lexer.peek(1).tokenType == TokenType::PLUS)
    {
        tabs++;
        printTabs("+");
        tabs--;
        expect(TokenType::PLUS);
        checkEL();
        if (!T(s))
        {
            syntax_error();
            return false;
        }

        string var = newTemp();
        // fout << var << " = " << i << " + " << s << endl;
        string fileOut = var + " = " + i + " + " + s + "\n";
        icLines.push_back(fileOut);
        i = var;
        varNum++;
        if (!R(s, i))
        {
            syntax_error();
            return false;
        }
    }

    else if (_lexer.peek(1).tokenType == TokenType::MINUS)
    {
        tabs++;
        printTabs("-");
        tabs--;
        expect(TokenType::MINUS);
        checkEL();

        if (!T(s))
        {
            syntax_error();
            return false;
        }

        string var = newTemp();
        varNum++;
        // fout << var << " = " << i << " - " << s << endl;
        string fileOut = var + " = " + i + " - " + s + "\n";
        icLines.push_back(fileOut);
        i = var;
        if (!R(s, i))
        {
            syntax_error();
            return false;
        }
    }
    else // for R-> ^ {R.s = R.i} production
    {
        s = i;
    }

    tabs--;
    return true;
}

bool parser::Q(string &s, string i)
{
    tabs++;
    printTabs("Q");
    checkEL();
    if (_lexer.peek(1).tokenType == TokenType::MUL)
    {
        tabs++;
        printTabs("*");
        tabs--;
        expect(TokenType::MUL);
        checkEL();
        if (!F(s))
        {
            syntax_error();
            return false;
        }

        string var = newTemp();
        varNum++;
        // fout << var << " = " << i << " * " << s << endl;
        string fileOut = var + " = " + i + " * " + s + "\n";
        icLines.push_back(fileOut);
        i = var;
        if (!Q(s, i))
        {
            syntax_error();
            return false;
        }
    }

    else if (_lexer.peek(1).tokenType == TokenType::DIV)
    {
        tabs++;
        printTabs("/");
        tabs--;
        expect(TokenType::DIV);
        checkEL();
        if (!F(s))
        {
            syntax_error();
            return false;
        }

        string var = newTemp();
        varNum++;
        // fout << var << " = " << i << " / " << s << endl;
        string fileOut = var + " = " + i + " / " + s + "\n";
        icLines.push_back(fileOut);
        i = var;
        if (!Q(s, i))
        {
            syntax_error();
            return false;
        }
    }

    else if (_lexer.peek(1).tokenType == TokenType::MOD)
    {
        tabs++;
        printTabs("%");
        tabs--;
        expect(TokenType::MOD);
        checkEL();
        if (!F(s))
        {
            syntax_error();
            return false;
        }

        string var = newTemp();
        varNum++;
        // fout << var << " = " << i << " % " << s << endl;
        string fileOut = var + " = " + i + " % " + s + "\n";
        icLines.push_back(fileOut);
        i = var;
        if (!Q(s, i))
        {
            syntax_error();
            return false;
        }
    }
    else // for Q -> ^ {Q.s = Q.i} production
    {
        s = i;
    }

    tabs--;
    return true;
}

bool parser::F(string &s)
{
    tabs++;
    printTabs("F");
    checkEL();
    if (_lexer.peek(1).tokenType == TokenType::ID)
    {
        tabs++;
        printTabs(_lexer.peek(1).lexeme);
        tabs--;
        s = _lexer.peek(1).lexeme;
        expect(TokenType::ID);
        checkEL();
        tabs--;
        return true;
    }

    else if (_lexer.peek(1).tokenType == TokenType::NUM)
    {
        tabs++;
        printTabs(_lexer.peek(1).lexeme);
        tabs--;
        s = _lexer.peek(1).lexeme;
        expect(TokenType::NUM);
        checkEL();
        tabs--;
        return true;
    }
    else if (_lexer.peek(1).tokenType == TokenType::OPEN_PARENTHESIS)
    {
        tabs++;
        printTabs(_lexer.peek(1).lexeme);
        tabs--;
        expect(TokenType::OPEN_PARENTHESIS);
        checkEL();
        if (!Expression(s))
        {
            syntax_error();
            return false;
        }
        if (_lexer.peek(1).tokenType == TokenType::CLOSE_PARENTHESIS)
        {
            tabs++;
            printTabs(_lexer.peek(1).lexeme);
            tabs--;
            expect(TokenType::CLOSE_PARENTHESIS);
            checkEL();
            tabs--;
            return true;
        }

        syntax_error();
        return false;
    }

    syntax_error();
    return false;
}

bool parser::Expression(string &s)
{

    tabs++;
    printTabs("Expression");
    if (!T(s))
    {
        syntax_error();
        return false;
    }

    string i = s;

    if (!R(s, i))
    {
        syntax_error();
        return false;
    }

    tabs--;
    // fout << s << endl;
    return true;
}

bool parser::Datatype()
{
    tabs++;
    printTabs("Datatype");
    checkEL();
    if (_lexer.peek(1).tokenType == TokenType::adad)
    {
        tbl[tblIndex].d = Datatype::adad;
        tblIndex++;
        tabs++;
        printTabs("adad");
        tabs--;
        expect(TokenType::adad);
        checkEL();
        tabs--;
        return true;
    }

    else if (_lexer.peek(1).tokenType == TokenType::khali)
    {
        tbl[tblIndex].d = Datatype::khali;
        tblIndex++;
        tabs++;
        printTabs("khali");
        tabs--;
        expect(TokenType::khali);
        checkEL();
        tabs--;
        return true;
    }

    syntax_error();
    return false;
}

bool parser::Datatype2()
{
    tabs++;
    printTabs("Datatype");
    checkEL();
    if (_lexer.peek(1).tokenType == TokenType::adad)
    {
        tbl[tblIndex].d = Datatype::adad;
        tblIndex++;
        tabs++;
        printTabs("adad");
        tabs--;
        expect(TokenType::adad);
        checkEL();
        tabs--;
        return true;
    }

    else if (_lexer.peek(1).tokenType == TokenType::khali)
    {
        tbl[tblIndex].d = Datatype::khali;
        tblIndex++;
        tabs++;
        printTabs("khali");
        tabs--;
        expect(TokenType::khali);
        checkEL();
        tabs--;
        return true;
    }

    syntax_error();
    return false;
}

bool parser::Input()
{
    tabs++;
    printTabs("Input");
    checkEL();
    if (_lexer.peek(1).tokenType == TokenType::lo)
    {
        tabs++;
        printTabs("lo");
        tabs--;
        expect(TokenType::lo);
        checkEL();
        if (!In())
        {
            syntax_error();
            return false;
        }

        tabs--;
        return true;
    }

    return false;
}

bool parser::B()
{
    tabs++;
    printTabs("B");
    checkEL();
    if (_lexer.peek(1).tokenType == TokenType::INPUT)
    {
        tabs++;
        printTabs(">>");
        tabs--;
        expect(TokenType::INPUT);
        checkEL();
        if (_lexer.peek(1).tokenType == TokenType::ID)
        {
            tabs++;
            printTabs(_lexer.peek(1).lexeme);
            tabs--;
            icLines.push_back("in " + _lexer.peek(1).lexeme + '\n');
            string id = _lexer.peek(1).lexeme;
            expect(TokenType::ID);
            checkEL();

            if (_lexer.peek(1).tokenType == TokenType::AT)
            {
                tabs++;
                printTabs("@");
                tabs--;
                expect(TokenType::AT);
                if (_lexer.peek(1).tokenType == TokenType::adad)
                {
                    tabs++;
                    printTabs("adad");
                    tabs--;
                    symbol s;
                    s.address = address;
                    address += 4;
                    s.d = Datatype::adad;
                    s.init = 0;
                    s.t = type::var;
                    s.var = id;
                    tbl.push_back(s);
                    tblIndex++;
                    expect(TokenType::adad);
                } 

                else
                {
                    syntax_error();
                    return false;
                }
                
            }
            if (!B())
            {
                syntax_error();
                return false;
            }
            tabs--;
            return true;
        }

        syntax_error();
        return false;
    }

    tabs--;
    return true;
}

bool parser::In()
{
    tabs++;
    printTabs("In");
    checkEL();
    if (_lexer.peek(1).tokenType == TokenType::INPUT)
    {
        tabs++;
        printTabs(">>");
        tabs--;
        expect(TokenType::INPUT);
        checkEL();
        if (_lexer.peek(1).tokenType == TokenType::ID)
        {
            tabs++;
            printTabs(_lexer.peek(1).lexeme);
            tabs--;
            icLines.push_back("in " + _lexer.peek(1).lexeme + '\n');
            string id = _lexer.peek(1).lexeme;
            expect(TokenType::ID);
            checkEL();

            if (_lexer.peek(1).tokenType == TokenType::AT)
            {
                tabs++;
                printTabs("@");
                tabs--;
                expect(TokenType::AT);
                if (_lexer.peek(1).tokenType == TokenType::adad)
                {
                    tabs++;
                    printTabs("adad");
                    tabs--;
                    symbol s;
                    s.address = address;
                    address += 4;
                    s.d = Datatype::adad;
                    s.init = 0;
                    s.t = type::var;
                    s.var = id;
                    tbl.push_back(s);
                    tblIndex++;
                    expect(TokenType::adad);
                } 

                else
                {
                    syntax_error();
                    return false;
                }
                
            }
            if (!B())
            {
                syntax_error();
                return false;
            }
            tabs--;
            return true;
        }

        syntax_error();
        return false;
    }

    else if (_lexer.peek(1).tokenType == TokenType::OUTPUT)
    {
        tabs++;
        printTabs("<<");
        tabs--;
        expect(TokenType::OUTPUT);
        checkEL();
        if (_lexer.peek(1).tokenType == TokenType::STR)
        {
            tabs++;
            printTabs(_lexer.peek(1).lexeme);
            tabs--;
            icLines.push_back("out \"" + _lexer.peek(1).lexeme.substr(1, _lexer.peek(1).lexeme.length() - 2) + "\"\n");
            expect(TokenType::STR);
            if (_lexer.peek(1).tokenType == TokenType::INPUT)
            {
                tabs++;
                printTabs(">>");
                tabs--;
                expect(TokenType::INPUT);
                checkEL();
                if (_lexer.peek(1).tokenType == TokenType::ID)
                {
                    tabs++;
                    printTabs(_lexer.peek(1).lexeme);
                    tabs--;
                    icLines.push_back("in " + _lexer.peek(1).lexeme + '\n');
                    string id = _lexer.peek(1).lexeme;
                    expect(TokenType::ID);
                    checkEL();

                    if (_lexer.peek(1).tokenType == TokenType::AT)
                    {
                        tabs++;
                        printTabs("@");
                        tabs--;
                        expect(TokenType::AT);
                        if (_lexer.peek(1).tokenType == TokenType::adad)
                        {
                            tabs++;
                            printTabs("adad");
                            tabs--;
                            symbol s;
                            s.address = address;
                            address += 4;
                            s.d = Datatype::adad;
                            s.init = 0;
                            s.t = type::var;
                            s.var = id;
                            tbl.push_back(s);
                            tblIndex++;
                            expect(TokenType::adad);
                        } 

                        else
                        {
                            syntax_error();
                            return false;
                        }
                        
                    }
                    if (!B())
                    {
                        syntax_error();
                        return false;
                    }
                    tabs--;
                    return true;
                }
                syntax_error();
                return false;
            }
            syntax_error();
            return false;
        }

        syntax_error();
        return false;
    }

    syntax_error();
    return false;
}

bool parser::A()
{
    tabs++;
    printTabs("A");
    checkEL();
    if (_lexer.peek(1).tokenType == TokenType::OUTPUT)
    {
        tabs++;
        printTabs("<<");
        tabs--;
        expect(TokenType::OUTPUT);
        checkEL();
        if (!Out())
        {
            syntax_error();
            return false;
        }

        if (!A())
        {
            syntax_error();
            return false;
        }

        tabs--;
        return true;
    }

    tabs--;
    return true;
}

bool parser::Out()
{
    tabs++;
    printTabs("Out");
    checkEL();
    string s;
    // if (_lexer.peek(1).tokenType == TokenType::NUM)
    // {
    //     tabs++;
    //     printTabs(_lexer.peek(1).lexeme);
    //     tabs--;
    //     icLines.push_back("out " + _lexer.peek(1).lexeme + '\n');
    //     expect(TokenType::NUM);
    //     checkEL();
    //     tabs--;
    //     return true;
    // }

    // else if (_lexer.peek(1).tokenType == TokenType::ID)
    // {
    //     tabs++;
    //     printTabs(_lexer.peek(1).lexeme);
    //     tabs--;
    //     icLines.push_back("out " + _lexer.peek(1).lexeme + '\n');
    //     expect(TokenType::ID);
    //     checkEL();
    //     tabs--;
    //     return true;
    // }

    if (_lexer.peek(1).tokenType == TokenType::STR)
    {
        tabs++;
        printTabs(_lexer.peek(1).lexeme);
        tabs--;
        icLines.push_back("out \"" + _lexer.peek(1).lexeme.substr(1, _lexer.peek(1).lexeme.length() - 2) + "\"\n");
        expect(TokenType::STR);
        checkEL();
        tabs--;
        return true;
    }
    
    else if (Expression(s))
    {
        icLines.push_back("out " + s + "\n");
        checkEL();
        tabs--;
        return true;   
    }

    syntax_error();
    return false;
}

bool parser::Output()
{
    tabs++;
    printTabs("Output");
    checkEL();
    if (_lexer.peek(1).tokenType == TokenType::dekhao)
    {
        tabs++;
        printTabs("dekhao");
        tabs--;
        expect(TokenType::dekhao);
        checkEL();
        if (_lexer.peek(1).tokenType == TokenType::OUTPUT)
        {
            tabs++;
            printTabs("<<");
            tabs--;
            expect(TokenType::OUTPUT);
            checkEL();
            if (!Out())
            {
                syntax_error();
                return false;
            }

            if (!A())
            {
                syntax_error();
                return false;
            }

            tabs--;
            return true;
        }

        syntax_error();
        return false;
    }

    return false;
}

bool parser::Return()
{
    string s;
    tabs++;
    printTabs("Return");
    checkEL();
    if (_lexer.peek(1).tokenType == TokenType::wapas)
    {
        tabs++;
        printTabs("wapas");
        tabs--;
        expect(TokenType::wapas);
        checkEL();
        if (_lexer.peek(1).tokenType == TokenType::bhaijo)
        {
            tabs++;
            printTabs("bhaijo");
            tabs--;
            expect(TokenType::bhaijo);
            checkEL();
            if (!Expression(s))
            {
                syntax_error();
                return false;
            }
            icLines.push_back("ret " + s + '\n');
            tabs--;
            return true;
        }
        syntax_error();
        return false;
    }

    return false;
}

bool parser::Loop()
{
    string s;
    tabs++;
    printTabs("Loop");
    int f = 0;
    int t = 0;
    checkEL();
    if (_lexer.peek(1).tokenType == TokenType::jab)
    {
        tabs++;
        printTabs("jab");
        tabs--;
        expect(TokenType::jab);
        checkEL();
        if (_lexer.peek(1).tokenType == TokenType::tak)
        {
            tabs++;
            printTabs("tak");
            tabs--;
            expect(TokenType::tak);
            checkEL();
            if (_lexer.peek(1).tokenType == TokenType::OPEN_PARENTHESIS)
            {
                tabs++;
                printTabs("(");
                tabs--;
                expect(TokenType::OPEN_PARENTHESIS);
                checkEL();
                f = icLines.size() + 1;
                if (!Expression(s))
                {
                    syntax_error();
                    return false;
                }
                else
                {
                    // fout << s << endl;
                    icLines.push_back("if " + s);
                    if (_lexer.peek(1).tokenType == TokenType::RO)
                    {
                        tabs++;
                        printTabs(_lexer.peek(1).lexeme);
                        tabs--;
                        icLines[icLines.size() - 1] += _lexer.peek(1).lexeme;
                        // if (_lexer.peek(1).lexeme == "LT")
                        //     icLines[icLines.size() - 1] += " < ";
                        // else if (_lexer.peek(1).lexeme == "LE")
                        //     icLines[icLines.size() - 1] += " <= ";
                        // else if (_lexer.peek(1).lexeme == "GT")
                        //     icLines[icLines.size() - 1] += " > ";
                        // else if (_lexer.peek(1).lexeme == "GE")
                        //     icLines[icLines.size() - 1] += " >= ";
                        // else if (_lexer.peek(1).lexeme == "EQ")
                        //     icLines[icLines.size() - 1] += " == ";
                        // else
                        //     icLines[icLines.size() - 1] += " <> ";

                        expect(TokenType::RO);
                        checkEL();
                        if (!Expression(s))
                        {
                            syntax_error();
                            return false;
                        }
                        else
                        {
                            // fout << s << endl;
                            icLines[icLines.size() - 1] += s + " goto ";
                            t = icLines.size() - 1;
                            if (_lexer.peek(1).tokenType == TokenType::CLOSE_PARENTHESIS)
                            {
                                tabs++;
                                printTabs(")");
                                tabs--;
                                expect(TokenType::CLOSE_PARENTHESIS);
                                checkEL();
                                if (_lexer.peek(1).tokenType == TokenType::karo)
                                {
                                    tabs++;
                                    printTabs("karo");
                                    tabs--;
                                    expect(TokenType::karo);
                                    checkEL();
                                    if (!Statements())
                                    {
                                        syntax_error();
                                        return false;
                                    }

                                    else
                                    {
                                        if (_lexer.peek(1).tokenType == TokenType::bas)
                                        {
                                            tabs++;
                                            printTabs("bas");
                                            tabs--;
                                            expect(TokenType::bas);
                                            checkEL();
                                            if (_lexer.peek(1).tokenType == TokenType::karo)
                                            {
                                                tabs++;
                                                printTabs("karo");
                                                tabs--;
                                                expect(TokenType::karo);
                                                checkEL();
                                                tabs--;
                                                icLines.push_back("goto " + to_string(f) + '\n');
                                                icLines[t] += to_string(icLines.size() + 1) + '\n';
                                                return true;
                                            }
                                        }
                                    }
                                }
                            }
                        }
                    }
                }
            }
        }
    }
    return false;
}

bool parser::Ele(vector<int> &v)
{
    string s;
    int f = 0;
    tabs++;
    printTabs("Ele");
    checkEL();
    if (_lexer.peek(1).tokenType == TokenType::OPEN_PARENTHESIS)
    {
        tabs++;
        printTabs("(");
        tabs--;
        expect(TokenType::OPEN_PARENTHESIS);
        checkEL();
        if (!Expression(s))
        {
            syntax_error();
            return false;
        }
        else
        {
            icLines.push_back("if " + s + " ");
            if (_lexer.peek(1).tokenType == TokenType::RO)
            {
                tabs++;
                printTabs(_lexer.peek(1).lexeme);
                tabs--;
                icLines[icLines.size() - 1] += _lexer.peek(1).lexeme;
                // if (_lexer.peek(1).lexeme == "LT")
                //     icLines[icLines.size() - 1] += "<";
                // else if (_lexer.peek(1).lexeme == "LE")
                //     icLines[icLines.size() - 1] += "<=";
                // else if (_lexer.peek(1).lexeme == "GT")
                //     icLines[icLines.size() - 1] += ">";
                // else if (_lexer.peek(1).lexeme == "GE")
                //     icLines[icLines.size() - 1] += ">=";
                // else if (_lexer.peek(1).lexeme == "EQ")
                //     icLines[icLines.size() - 1] += "==";
                // else
                //     icLines[icLines.size() - 1] += "<>";
                expect(TokenType::RO);
                checkEL();

                if (!Expression(s))
                {
                    syntax_error();
                    return false;
                }
                else
                {
                    icLines[icLines.size() - 1] += " " + s + " goto " + to_string(icLines.size() + 2) + "\n";
                    icLines.push_back("goto ");
                    f = icLines.size() - 1;
                    if (_lexer.peek(1).tokenType == TokenType::CLOSE_PARENTHESIS)
                    {
                        tabs++;
                        printTabs(")");
                        tabs--;
                        expect(TokenType::CLOSE_PARENTHESIS);
                        checkEL();
                        if (_lexer.peek(1).tokenType == TokenType::to)
                        {
                            tabs++;
                            printTabs("to");
                            tabs--;
                            expect(TokenType::to);
                            checkEL();
                            if (_lexer.peek(1).tokenType == TokenType::phir)
                            {
                                tabs++;
                                printTabs("phir");
                                tabs--;
                                expect(TokenType::phir);
                                checkEL();
                                if (!Statements())
                                {
                                    syntax_error();
                                    return false;
                                }
                                else
                                {
                                    icLines.push_back("goto ");
                                    icLines[f] += to_string(icLines.size() + 1) + "\n";
                                    v.push_back(icLines.size() - 1);
                                    if (!Els(v))
                                    {
                                        syntax_error();
                                        return false;
                                    }
                                    else
                                    {
                                        tabs--;
                                        return true;
                                    }
                                }
                            }
                        }
                    }
                }
            }
        }
    }

    syntax_error();
    return false;
}

bool parser::El()
{
    tabs++;
    printTabs("El");
    if (!Statements())
    {
        syntax_error();
        return false;
    }

    tabs--;
    return true;
}

bool parser::Els(vector<int> &v)
{
    tabs++;
    printTabs("Els");
    checkEL();
    if (_lexer.peek(1).tokenType == TokenType::warna)
    {
        tabs++;
        printTabs("warna");
        tabs--;
        expect(TokenType::warna);
        checkEL();
        if (_lexer.peek(1).tokenType == TokenType::agar)
        {
            tabs++;
            printTabs("agar");
            tabs--;
            expect(TokenType::agar);
            checkEL();
            if (!Ele(v))
            {
                syntax_error();
                return false;
            }
            else
            {
                tabs--;
                return true;
            }
        }
        else if (_lexer.peek(1).tokenType == TokenType::phir)
        {
            tabs++;
            printTabs("phir");
            tabs--;
            expect(TokenType::phir);
            checkEL();
            if (!El())
            {
                syntax_error();
                return false;
            }
            else
            {
                tabs--;
                return true;
            }
        }
    }

    return true;
    // syntax_error();
    // return false;
}

bool parser::Else(vector<int> &v)
{
    string s;
    tabs++;
    printTabs("Else");
    int f = 0;
    checkEL();
    if (_lexer.peek(1).tokenType == TokenType::warna)
    {
        tabs++;
        printTabs("warna");
        tabs--;
        expect(TokenType::warna);
        checkEL();
        if (_lexer.peek(1).tokenType == TokenType::agar)
        {
            tabs++;
            printTabs("agar");
            tabs--;
            expect(TokenType::agar);
            checkEL();
            if (_lexer.peek(1).tokenType == TokenType::OPEN_PARENTHESIS)
            {
                tabs++;
                printTabs("(");
                tabs--;
                expect(TokenType::OPEN_PARENTHESIS);
                checkEL();
                if (!Expression(s))
                {
                    syntax_error();
                    return false;
                }
                else
                {
                    icLines.push_back("if " + s + " ");
                    if (_lexer.peek(1).tokenType == TokenType::RO)
                    {
                        tabs++;
                        printTabs(_lexer.peek(1).lexeme);
                        tabs--;
                        icLines[icLines.size() - 1] += _lexer.peek(1).lexeme;
                        // if (_lexer.peek(1).lexeme == "LT")
                        //     icLines[icLines.size() - 1] += "<";
                        // else if (_lexer.peek(1).lexeme == "LE")
                        //     icLines[icLines.size() - 1] += "<=";
                        // else if (_lexer.peek(1).lexeme == "GT")
                        //     icLines[icLines.size() - 1] += ">";
                        // else if (_lexer.peek(1).lexeme == "GE")
                        //     icLines[icLines.size() - 1] += ">=";
                        // else if (_lexer.peek(1).lexeme == "EQ")
                        //     icLines[icLines.size() - 1] += "==";
                        // else
                        //     icLines[icLines.size() - 1] += "<>";

                        expect(TokenType::RO);
                        checkEL();
                        if (!Expression(s))
                        {
                            syntax_error();
                            return false;
                        }
                        else
                        {
                            icLines[icLines.size() - 1] += " " + s + " goto " + to_string(icLines.size() + 2) + "\n";
                            icLines.push_back("goto ");
                            f = icLines.size() - 1;
                            if (_lexer.peek(1).tokenType == TokenType::CLOSE_PARENTHESIS)
                            {
                                tabs++;
                                printTabs(")");
                                tabs--;
                                expect(TokenType::CLOSE_PARENTHESIS);
                                checkEL();
                                if (_lexer.peek(1).tokenType == TokenType::to)
                                {
                                    tabs++;
                                    printTabs("to");
                                    tabs--;
                                    expect(TokenType::to);
                                    checkEL();

                                    if (_lexer.peek(1).tokenType == TokenType::phir)
                                    {
                                        tabs++;
                                        printTabs("phir");
                                        tabs--;
                                        expect(TokenType::phir);
                                        checkEL();

                                        if (!Statements())
                                        {
                                            syntax_error();
                                            return false;
                                        }
                                        else
                                        {
                                            icLines.push_back("goto ");
                                            icLines[f] += to_string(icLines.size() + 1) + "\n";
                                            v.push_back(icLines.size() - 1);
                                            if (!Els(v))
                                            {
                                                syntax_error();
                                                return false;
                                            }
                                            else
                                            {
                                                tabs--;
                                                return true;
                                            }
                                        }
                                    }
                                }
                            }
                        }
                    }
                }
            }
        }

        _lexer.setCurrentPointer(_lexer.getCurrentPointer() - 1);
        if (!Els(v))
        {
            syntax_error();
            return false;
        }
    }


    tabs--;
    return true;
}

bool parser::If()
{
    vector<int> forIf;
    int f;
    string s;
    ++tabs;
    printTabs("If");
    checkEL();
    if (_lexer.peek(1).tokenType == TokenType::agar)
    {
        tabs++;
        printTabs("agar");
        tabs--;
        expect(TokenType::agar);
        checkEL();
        if (_lexer.peek(1).tokenType == TokenType::OPEN_PARENTHESIS)
        {
            tabs++;
            printTabs("(");
            tabs--;
            expect(TokenType::OPEN_PARENTHESIS);
            checkEL();

            if (!Expression(s))
            {
                syntax_error();
                return false;
            }
            else
            {
                icLines.push_back("if " + s + " ");
                if (_lexer.peek(1).tokenType == TokenType::RO)
                {
                    tabs++;
                    printTabs(_lexer.peek(1).lexeme);
                    tabs--;
                     icLines[icLines.size() - 1] += _lexer.peek(1).lexeme;
                    // if (_lexer.peek(1).lexeme == "LT")
                    //     icLines[icLines.size() - 1] += "<";
                    // else if (_lexer.peek(1).lexeme == "LE")
                    //     icLines[icLines.size() - 1] += "<=";
                    // else if (_lexer.peek(1).lexeme == "GT")
                    //     icLines[icLines.size() - 1] += ">";
                    // else if (_lexer.peek(1).lexeme == "GE")
                    //     icLines[icLines.size() - 1] += ">=";
                    // else if (_lexer.peek(1).lexeme == "EQ")
                    //     icLines[icLines.size() - 1] += "==";
                    // else
                    //     icLines[icLines.size() - 1] += "<>";
                    expect(TokenType::RO);
                    checkEL();

                    if (!Expression(s))
                    {
                        syntax_error();
                        return false;
                    }
                    else
                    {
                        icLines[icLines.size() - 1] += " " + s + " goto " + to_string(icLines.size() + 2) + '\n';
                        icLines.push_back("goto ");
                        f = icLines.size() - 1;
                        if (_lexer.peek(1).tokenType == TokenType::CLOSE_PARENTHESIS)
                        {
                            tabs++;
                            printTabs(")");
                            tabs--;
                            expect(TokenType::CLOSE_PARENTHESIS);
                            checkEL();

                            if (_lexer.peek(1).tokenType == TokenType::to)
                            {
                                tabs++;
                                printTabs("to");
                                tabs--;
                                expect(TokenType::to);
                                checkEL();

                                if (_lexer.peek(1).tokenType == TokenType::phir)
                                {
                                    tabs++;
                                    printTabs("phir");
                                    tabs--;
                                    expect(TokenType::phir);
                                    checkEL();

                                    if (_lexer.peek(1).tokenType == TokenType::karo)
                                    {
                                        tabs++;
                                        printTabs("karo");
                                        tabs--;
                                        expect(TokenType::karo);
                                        checkEL();

                                        if (!Statements())
                                        {
                                            syntax_error();
                                            return false;
                                        }
                                        else
                                        {
                                            icLines.push_back("goto ");
                                            icLines[f] += to_string(icLines.size() + 1) + "\n";
                                            forIf.push_back(icLines.size() - 1);
                                            if (!Else(forIf))
                                            {
                                                syntax_error();
                                                return false;
                                            }
                                            else
                                            {
                                                if (_lexer.peek(1).tokenType == TokenType::bas)
                                                {
                                                    tabs++;
                                                    printTabs("bas");
                                                    tabs--;
                                                    expect(TokenType::bas);
                                                    checkEL();

                                                    if (_lexer.peek(1).tokenType == TokenType::karo)
                                                    {
                                                        tabs++;
                                                        for (int i = 0; i < forIf.size(); i++)
                                                        {
                                                            icLines[forIf[i]] += to_string(icLines.size() + 1) + "\n";
                                                        }
                                                        printTabs("karo");
                                                        tabs--;
                                                        expect(TokenType::karo);
                                                        checkEL();
                                                        tabs--;
                                                        return true;
                                                    }
                                                }
                                            }
                                        }
                                    }
                                }
                            }
                        }
                    }
                }
            }
        }
    }
    return false;
}
